[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/Title.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/TestLevel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://ViewportContainerPlayer1.gd" type="Script" id=4]
[ext_resource path="res://ViewportContainerPlayer2.gd" type="Script" id=5]
[ext_resource path="res://viewport_player_shader.tres" type="Material" id=6]
[ext_resource path="res://assets/masks/lines.png" type="Texture" id=7]
[ext_resource path="res://ParallaxBackground.tscn" type="PackedScene" id=8]
[ext_resource path="res://fps.gd" type="Script" id=9]
[ext_resource path="res://assets/dungeon-groove-ldjam51.ogg" type="AudioStream" id=10]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float playerState : hint_range(0, 1) = 0.0;
uniform float darken : hint_range(0, 1) = 0.2;

void fragment() {
	vec4 pixelColor = texture(TEXTURE, UV);
	float brightness = mix((pixelColor.r + pixelColor.g + pixelColor.b) / (3.0 + ((1.0 - UV.y) * 2.0)), 0.0, darken);
	vec4 grayscale = vec4(brightness, brightness, brightness, pixelColor.a);
	COLOR = mix(pixelColor, grayscale, playerState);
	COLOR.a *= pixelColor.a;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/playerState = 1.0
shader_param/darken = 0.2

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float cutoff : hint_range(0.0, 1.0);
uniform float smooth_size : hint_range(0.0, 1.0);
uniform sampler2D mask : hint_albedo;

uniform vec4 color : hint_color;

void fragment()
{
	float value = texture(mask, UV).r;
	float alpha = smoothstep(cutoff, cutoff + smooth_size, value * (1.0 - smooth_size) + smooth_size);
	COLOR = vec4(color.rgb, alpha);
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/cutoff = 1.0
shader_param/smooth_size = 0.1
shader_param/color = null
shader_param/mask = ExtResource( 7 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/fonts/dogicapixelbold.otf"

[sub_resource type="DynamicFont" id=6]
size = 8
extra_spacing_top = 2
font_data = SubResource( 5 )

[node name="Game" type="Node"]
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
pause_mode = 2
margin_right = 320.0
margin_bottom = 180.0
custom_constants/separation = 0

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer"]
material = ExtResource( 6 )
margin_right = 320.0
margin_bottom = 89.0
rect_min_size = Vector2( 320, 89 )
script = ExtResource( 4 )

[node name="Viewport" type="Viewport" parent="VBoxContainer/ViewportContainer"]
size = Vector2( 320, 89 )
transparent_bg = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="LevelManager" type="Control" parent="VBoxContainer/ViewportContainer/Viewport"]
margin_right = 40.0
margin_bottom = 40.0

[node name="TestLevel" parent="VBoxContainer/ViewportContainer/Viewport/LevelManager" instance=ExtResource( 2 )]

[node name="Camera2D" type="Camera2D" parent="VBoxContainer/ViewportContainer/Viewport"]
current = true
smoothing_enabled = true

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
margin_top = 89.0
margin_right = 320.0
margin_bottom = 91.0
rect_min_size = Vector2( 320, 2 )
color = Color( 0.152941, 0.0980392, 0.152941, 1 )

[node name="ViewportContainer2" type="ViewportContainer" parent="VBoxContainer"]
material = SubResource( 2 )
margin_top = 91.0
margin_right = 320.0
margin_bottom = 180.0
rect_min_size = Vector2( 320, 89 )
script = ExtResource( 5 )

[node name="Viewport" type="Viewport" parent="VBoxContainer/ViewportContainer2"]
size = Vector2( 320, 89 )
transparent_bg = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="ParallaxBackground" parent="VBoxContainer/ViewportContainer2/Viewport" instance=ExtResource( 8 )]

[node name="Camera2D" type="Camera2D" parent="VBoxContainer/ViewportContainer2/Viewport"]
current = true
smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TitleScreen" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="Transition" type="ColorRect" parent="CanvasLayer"]
pause_mode = 2
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="fps" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -69.0
margin_top = -18.0
margin_right = -1.0
margin_bottom = -3.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
align = 2
valign = 2
script = ExtResource( 9 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
